--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       <p><a href="https://github.com/ilesoft">GitHub</a></p>
       <p><a href="resume.pdf">Resume</a></p>
       <p><a href="https://t.me/ilmarii">Telegram</a></p>
-      <p><a href="https://vektor.io/">My current employer</a></p>
-      <p><a href="files.html">Files</a></p>
+      <p><a href="https://monad.fi/">My current employer</a></p>
       <p><a href="blog.html">Weblog</a></p>
       <!--p><a href="gopher://ilesoft.dy.fi">gopher hole</a></p-->
     </div>
